refactor : replace remaining uses of guava ImmutableList with Java's List.of() Fixes #1353