@@ -20,7 +20,7 @@ package com.axelor.app;
 
 import com.axelor.event.Observes;
 import com.axelor.events.StartupEvent;
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -32,7 +32,7 @@ public class AppSettingsObserver {
     final AppSettings settings = AppSettings.get();
 
     for (final String setting :
-        ImmutableList.of(
+        List.of(
             AvailableAppSettings.APPLICATION_PERMISSION_DISABLE_RELATIONAL_FIELD,
             AvailableAppSettings.APPLICATION_PERMISSION_DISABLE_ACTION)) {
       if (settings.getBoolean(setting, false)) {
